+ignore, add wp volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,15 @@
 version: '2'
 
 services:
-
   wordpress:
     image: wordpress
     ports:
       - 80:80
     environment:
       WORDPRESS_DB_PASSWORD: w37eryhsweywse5uj
-
+#    restart: always
+    volumes:
+        - "./wp:/var/www/html"
   mysql:
     image: mariadb:10.3
     environment:
@@ -20,3 +21,4 @@ services:
         - "./db:/var/lib/mysql"
     ports:
         - "3306:3306"
+#    restart: always
