--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - 80:80
     environment:
       WORDPRESS_DB_PASSWORD: w37eryhsweywse5uj
-#    restart: always
+    restart: always
     volumes:
         - "./wp:/var/www/html"
   mysql:
@@ -21,4 +21,4 @@ services:
         - "./db:/var/lib/mysql"
     ports:
         - "3306:3306"
-#    restart: always
+    restart: always
